force-app/main/default/objects/Lead/fields/DST_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DST_End_Date__c</fullName>
    <label>DST End Date</label>
    <type>Date</type>
</CustomField>