force-app/main/default/objects/Lead/fields/Is_DST__c.field-meta.xml
<CustomField>
    <fullName>Is_DST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is DST</label>
    <type>Checkbox</type>
</CustomField>