force-app/main/default/objects/Lead/fields/Timezone_Offset__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Offset__c</fullName>
    <label>Timezone Offset</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>