force-app/main/default/objects/Lead/fields/Timezone_Updated__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timezone Updated</label>
    <type>Checkbox</type>
</CustomField>